037_array_subseq/grade.txt
Grading at 09/19/2020:15:49:01.251606
For commit ID 5f4872d2ae58b5500ae8aa13afca5f1b5ed41066
Grading at Sat Sep 19 23:49:01 CST 2020
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:21:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
